--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -3,3 +3,30 @@
     flex-direction: column;
     align-items: center;
   }
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.slider {
+    width: 30vw;
+    display: inline;
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 30vw;
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
