--- a/components/form.module.css
+++ b/components/form.module.css
@@ -1,8 +1,8 @@
 .flexContainer {
+    min-width: 720px;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex: 1;
+    flex-wrap: wrap;
 }
 
 .flexChildLeft {
@@ -23,13 +23,13 @@
 
 .namesContainer {
     display: flex;
-    flex: 1;
+    flex: 2;
     flex-direction: row;
 }
 
 .slidersContainer {
     display: flex;
-    flex: 3;
+    flex: 10;
     flex-direction: row;
 }
 
