--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,38 +1,20 @@
-.header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@font-face {
+  font-family: Exo;
+  src: url('../public/Exo-Regular.ttf')
 }
 
-.slider {
-    width: 30vw;
-    display: inline;
-    margin-left: 2vw;
-    margin-right: 2vw;
-  }
+.header {
+  text-align: center;
+  font-size: 36px;
+  font-family: Exo, Verdana, Geneva, Tahoma, sans-serif;
+  margin-bottom: 2px;
+  margin-top: 5px;
+}
 
-  .row {
-    display: flex;
-    flex-direction: row;
-    width: 30vw;
-  }
-  
-  .column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-  }
-
-.plot {
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 auto;
-  margin-top: 2%;
+.autorship {
+  bottom: 0%;
+  right: 1%;
+  font-size: 12px;
+  font-family: Exo, Verdana, Geneva, Tahoma, sans-serif;
+  position: fixed;
 }
