--- a/components/form.module.css
+++ b/components/form.module.css
@@ -1,11 +1,13 @@
 .flexContainer {
     font-family: Exo, Verdana, Geneva, Tahoma, sans-serif;
-    min-width: 650px;
+    min-width: 600px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .namesContainer{
@@ -44,20 +46,7 @@
     width: 50%;
 }
 
-/*
-.flexChildLeft {
-    margin-left: auto;
-    margin-right: 0.5vw;
+.placeholder {
+    display: flex;
+    width: 35%;
 }
-
-.flexChildCenter {
-    width: 20vw;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-}
-
-.flexChildRight {
-    margin-left: 0.5vw;
-    margin-right: auto;
-}
-*/
